can pick item but so weird