@@ -1,157 +1,83 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
- */
 package com.heycream.model;
 
 import com.heycream.AbstractAndInterface.DessertItem;
-import java.util.*;
-import java.util.stream.*;
-/**
- *
- * @author lenovo
- */
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+
 public class Order {
-    
-    //attribute
-    private final Cup requestedCup;
-    private final List<DessertItem> items;
-    private boolean completed = false;
-    public static final int MAX_SCOOPS   = 3;
-    public static final int MAX_TOPPINGS = 3;
-    public static final int MAX_SAUCE    = 1;
-    
-    //constructor
-    public Order(Cup cup)
-    {
+    private Cup requestedCup;
+    private List<IceCream> scoops;
+    private Topping topping;
+    private Sauce sauce;
+
+
+
+    public Order(Cup cup) {
         this.requestedCup = cup;
-        this.items = new ArrayList<>();
-        if (cup.getScoops() != null) 
-        {
-            this.items.addAll(cup.getScoops());
-        }
-        if (cup.getToppings() != null) 
-        {
-            this.items.addAll(cup.getToppings());
-        }
-        if (cup.getSauce() != null) 
-        {
-            this.items.add(cup.getSauce());
-        }
+        this.scoops = new ArrayList<>();
     }
 
-    //method
-    public boolean isCompleted() { return completed; }
     public Cup getRequestedCup() { return requestedCup; }
-    public void setCompleted(boolean v) { completed = v; }
-   
-    public boolean addItem(DessertItem item) 
-    {
-        switch (item.getType()) 
-        {
-            case "IceCream":
-                if (getScoops().size() >= MAX_SCOOPS) return false;
-                break;
-            case "Topping":
-                if (getToppings().size() >= MAX_TOPPINGS) return false;
-                break;
-            case "Sauce":
-                if (getSauce().isPresent()) return false;
-                break;
-            default: return false;
-        }
-        items.add(item);
-        return true;
-    }
-    public List<IceCream> getScoops()
-    {
-        return items.stream()
-                .filter(d -> "IceCream".equals(d.getType()))
-                .map(d -> (IceCream) d)
-                .collect(Collectors.toList());
-    }
-    public List<Topping> getToppings() 
-    {
-        return items.stream()
-                .filter(d -> "Topping".equals(d.getType()))
-                .map(d -> (Topping) d)
-                .collect(Collectors.toList());
-    }
-    public Optional<Sauce> getSauce() 
-    {
-        return items.stream()
-                .filter(d -> "Sauce".equals(d.getType()))
-                .map(d -> (Sauce) d)
-                .findFirst();
-    }
-    public List<DessertItem> getAllItems() 
-    {
-        return Collections.unmodifiableList(items);
-    }
-    
-    //display
-    public String describe() 
-    {
-        String scoopsStr = getScoops().isEmpty() ? "none" :
-            getScoops().stream().map(IceCream::getFlavor).sorted().collect(Collectors.joining(", "));
-        String toppingsStr = getToppings().isEmpty() ? "none" :
-            getToppings().stream().map(Topping::getName).sorted().collect(Collectors.joining(", "));
-        String sauceStr = getSauce().map(Sauce::getName).orElse("none");
+    public List<IceCream> getScoops() { return scoops; }
 
-        StringBuilder sb = new StringBuilder();
-        sb.append("Order Details\n")
-          .append("--------------------\n")
-          .append("Cup Type: ").append(requestedCup.getType()).append("\n")  // เพิ่ม type ให้ชัด
-          .append("Cup Size: ").append(requestedCup.getSize()).append("\n")
-          .append("Ice Cream: ").append(scoopsStr).append("\n")
-          .append("Toppings: ").append(toppingsStr).append("\n")
-          .append("Sauce: ").append(sauceStr).append("\n")
-          .append("--------------------\n")
-          .append("Status: ").append(completed ? "Completed" : "In Progress").append("\n");
-        return sb.toString();
+    public void addIceCream(IceCream scoop) { scoops.add(scoop); }
+
+    public Topping getTopping() { return topping; }
+    public void setTopping(Topping topping) { this.topping = topping; }
+
+    public Sauce getSauce() { return sauce; }
+    public void setSauce(Sauce sauce) { this.sauce = sauce; }
+    public List<DessertItem> getAllItem() {
+        List<DessertItem> items = new ArrayList<>();
+        items.addAll(scoops);
+        if (topping != null) items.add(topping);
+        if (sauce != null) items.add(sauce);
+        return items;
     }
-    public double getTotalPrice() 
-    {
-        double total = 0.0;
-        for (DessertItem item : items)
-        {
-            total += item.getPrice();
-        }
+
+    public double getTotalPrice() {
+        double total = 0;
+        total += (requestedCup.getType() == CupType.Cone) ? 10 : 15;
+        total += scoops.size() * scoops.get(0).getPrice();
+        if (topping != null) total += topping.getPrice();
+        if (sauce != null) total += sauce.getPrice();
         return total;
     }
 
-    
-    //match
-    public boolean checkMatch(Cup actualCup) 
-    {
+    public boolean checkMatch(Cup actualCup) {
         if (actualCup == null || requestedCup == null) return false;
 
-        //size and type same?
-        boolean cupMatch = requestedCup.getType().equals(actualCup.getType())
-                        && requestedCup.getSize().equals(actualCup.getSize());
+        boolean cupMatch = requestedCup.getType() == actualCup.getType()
+                && requestedCup.getSize() == actualCup.getSize();
 
-        //map reqIceCream, actIceCream and compare
-        List<String> reqScoops = getScoops().stream()
-                .map(IceCream::getFlavor).map(String::toLowerCase).sorted().collect(Collectors.toList());
-        List<String> actScoops = actualCup.getScoops().stream()
-                .map(IceCream::getFlavor).map(String::toLowerCase).sorted().collect(Collectors.toList());
-        boolean scoopMatch = reqScoops.equals(actScoops);
+        boolean scoopMatch = Objects.equals(
+            requestedCup.getScoops().stream().map(IceCream::getFlavor).toList(),
+            actualCup.getScoops().stream().map(IceCream::getFlavor).toList()
+        );
 
-        //map reqTopping, actTopping and compare
-        List<String> reqToppings = getToppings().stream()
-                .map(Topping::getName).map(String::toLowerCase).sorted().collect(Collectors.toList());
-        List<String> actToppings = actualCup.getToppings().stream()
-                .map(Topping::getName).map(String::toLowerCase).sorted().collect(Collectors.toList());
-        boolean toppingMatch = reqToppings.equals(actToppings);
+        boolean toppingMatch = Objects.equals(
+            (topping != null ? topping.getName() : null),
+            (actualCup.getToppings().isEmpty() ? null : actualCup.getToppings().get(0).getName())
+        );
 
-        //map reqSauce, actSauce and compare
-        String reqSauce = getSauce().map(Sauce::getName).orElse("none").toLowerCase();
-        String actSauce = actualCup.getSauce() != null ? actualCup.getSauce().getName().toLowerCase() : "none";
-        boolean sauceMatch = reqSauce.equals(actSauce);
+        boolean sauceMatch = Objects.equals(
+            (sauce != null ? sauce.getName() : null),
+            (actualCup.getSauce() != null ? actualCup.getSauce().getName() : null)
+        );
 
-        //compare Request and Actual
-        boolean result = cupMatch && scoopMatch && toppingMatch && sauceMatch;
+        return cupMatch && scoopMatch && toppingMatch && sauceMatch;
+    }
 
-        return result;
+    public String describe() {
+        StringBuilder sb = new StringBuilder();
+        sb.append(requestedCup.toString()).append(" with ");
+        for (int i = 0; i < scoops.size(); i++) {
+            sb.append(scoops.get(i).getFlavor());
+            if (i < scoops.size() - 1) sb.append(", ");
+        }
+        if (topping != null) sb.append(", topped with ").append(topping.getName());
+        if (sauce != null) sb.append(", drizzled ").append(sauce.getName());
+        return sb.toString();
     }
 }
